<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:id="@+id/activity_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editTextFirstName"
            android:layout_marginTop="12dp"
            android:background="@drawable/borders"
            android:ems="10"
            android:hint="@string/lastNameHint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextPassword1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editTextEmailID"
            android:layout_marginTop="12dp"
            android:background="@drawable/borders"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editTextPassword1"
            android:layout_marginTop="12dp"
            android:background="@drawable/borders"
            android:ems="10"
            android:hint="@string/repeatPasswrdHint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextEmailID"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editTextLastName"
            android:layout_marginTop="59dp"
            android:background="@drawable/borders"
            android:ems="10"
            android:hint="@string/emailHint"
            android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editTextLastName"
            android:layout_marginTop="12dp" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/buttonSignUp"
            android:layout_alignBottom="@+id/buttonSignUp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/round_button"
            android:text="@string/cancelHint"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/borders"
            android:id="@+id/phone"
            android:hint="Mobile no."
            android:layout_below="@+id/editTextPassword2"
            android:layout_marginTop="10dp"
            android:inputType="phone"/>

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPassword2"
            android:layout_marginTop="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/round_button"
            android:text="@string/signUpLabel"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewAppTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="BookBarter"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageViewProfilePic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/textViewAppTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageViewProfilePic"
            android:layout_marginTop="18dp"
            android:background="@drawable/borders"
            android:ems="10"
            android:hint="@string/firstNameHint"
            android:inputType="textPersonName" />
    </RelativeLayout>

</ScrollView>
